--- a/client-side/src/index.html
+++ b/client-side/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html ng-app="mantl">
+<html ng-app="uam">
   <head>
     <meta charset="utf-8">
-    <title>UAR-Mantl.io</title>
+    <title>UAM</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
